--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,8 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<div>
+			<p>Xavier Gonzalez, développeur web full-stack en situation de handicap.</p>
+		</div>
 	</body>
 </html>
