--- a/hello.html
+++ b/hello.html
@@ -16,8 +16,15 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<!-- Description -->	
 		<div>
-			<p>Xavier Gonzalez, développeur web full-stack en situation de handicap.</p>
+			<h1> Ma description </h1>
+			<p> Xavier Gonzalez, développeur web full-stack en situation de handicap. </p>
+		</div>
+		<!-- Récompenses -->	
+		<div>
+			<h1> Mes récompenses </h1>
+			<p> en construction ... </p>
 		</div>
 	</body>
 </html>
