--- a/hello.html
+++ b/hello.html
@@ -26,5 +26,13 @@
 			<h1> Mes récompenses </h1>
 			<p> en construction ... </p>
 		</div>
+		<!-- Mon gist -->	
+		<div>
+			<h1> Mon gist </h1>
+			<p> 		<!-- Récompenses -->	
+		<div>
+			<h1> Mes récompenses </h1>
+			<p> <script src="https://gist.github.com/Xav46-31500/ad7d6f0f035a7738e6458eadb764839b.js"></script> </p>
+		</div>
 	</body>
 </html>
